@@ -14,16 +14,24 @@
   <p>All images below were generated by using the same set of nearly
   9000 constituent images.
 
-  <p>This image is a classical photomosaic using default weights:
+  <p>This image is a classical photomosaic using the subpixel metric
+  with a minimum distance of 8:
 
-  <p><a href="christy2_mosaic_defaults.jpg"><img src="christy2_mosaic_defaults_small.jpg"></a>
+  <p><a href="christy2_mosaic_subpixel_d8.jpg"><img src="christy2_mosaic_subpixel_d8_small.jpg"></a>
 
-  <p>This is a classical photomosaic with weights of the I and Q
-  channel set to 0, i.e. weighting only luminocity:
+  <p>This is a classical photomosaic using the wavelet metric with
+  distance set to 2 and cheating set to 30%:
+
+  <p><a href="christy2_mosaic_a30d2.jpg"><img src="christy2_mosaic_a30d2_small.jpg"></a>
+
+  <p>This is a classical photomosaic using the wavelet metric with
+  weights of the I and Q channel set to 0, i.e. weighting only
+  luminocity:
 
   <p><a href="christy2_mosaic_i0q0.jpg"><img src="christy2_mosaic_i0q0_small.jpg"></a>
 
-  <p>This image is a collage photomosaic using defaults weights:
+  <p>This image is a collage photomosaic using the wavelet metric with
+  defaults weights:
 
   <p><a href="christy2_mosaic_collage_defaults.jpg"><img src="christy2_mosaic_collage_defaults_small.jpg"></a>
 
